flux/apps/satisfactory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satisfactory
  namespace: default
  labels:
    app: satisfactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satisfactory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      tolerations:
        - key: role
          operator: Equal
          value: gaming-workstation
          effect: NoSchedule
      volumes:
        - name: satisfactory-config
          persistentVolumeClaim:
            claimName: satisfactory-claim
      containers:
        - name: satisfactory
          image: wolveix/satisfactory-server:v1.9.10
          ports:
            - { containerPort: 7777, protocol: TCP }
            - { containerPort: 7777, protocol: UDP }
            - { containerPort: 8888, protocol: TCP }
          volumeMounts:
            - { name: satisfactory-config, mountPath: /config }
          resources:
            requests: { cpu: 500m, memory: 2Gi }
            limits: { cpu: 4000m, memory: 8Gi }
          readinessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
