flux/apps/satisfactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satisfactory
  namespace: default
  labels:
    app: satisfactory
  annotations:
    tailscale.com/hostname: satisfactory
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: satisfactory
  ports:
    - { name: game-tcp, port: 7777, targetPort: 7777, protocol: TCP }
    - { name: game-udp, port: 7777, targetPort: 7777, protocol: UDP }
    - { name: messaging, port: 8888, targetPort: 8888, protocol: TCP }
