flux/apps/satisfactory/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: satisfactory
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: satisfactory
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: 7777
          protocol: TCP
        - port: 7777
          protocol: UDP
        - port: 8888
          protocol: TCP
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
        - port: 7777
          protocol: UDP
